src/objects/Trust_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Date_Reported__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formatted_Date__c</fullName>
        <label>Formatted Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reporting User</label>
        <referenceTo>Jedi_User__c</referenceTo>
        <relationshipLabel>My Submitted Trust Issues</relationshipLabel>
        <relationshipName>Trust_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Subject__c</fullName>
        <label>Short Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved (Corrected Issue)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved (Not an Issue)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved (Training Assigned)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>Brief description of the issue.</inlineHelpText>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TrustJediMobile_Short_Subject_c__c</fullName>
        <label>TrustJediMobile__Short_Subject__c</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Badge Surfing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Spam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Badge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stolen Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stranger Danger!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsecured Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>submittedDate__c</fullName>
        <label>submittedDate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Trust Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TI-[{000000}]</displayFormat>
        <label>Trust Issue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trust Issues</pluralLabel>
    <recordTypes>
        <fullName>Trust_Admin</fullName>
        <active>true</active>
        <label>Trust Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trust_User</fullName>
        <active>true</active>
        <label>Trust User</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Can_Create_In_Submitted_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  TEXT(Status__c) != &apos;Submitted&apos;,
  ISNEW()
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Cannot create Trust Issue without Submitted as Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Reporting_User</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISNULL(Reporting_User__c),
  NOT(ISNEW())
)</errorConditionFormula>
        <errorDisplayField>Reporting_User__c</errorDisplayField>
        <errorMessage>Reporting User is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Field_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  LEN(TEXT(Type__c)) = 0,
  NOT(ISNEW())
)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Type field is required.</errorMessage>
    </validationRules>
</CustomObject>